# eosio-qr-supply-chain-example

./: .gitignore  LICENSE  README.md  deploy_contract.sh  docker-compose.yml
blockchain/scripts/: keosd.sh  nodeos.sh
contract/include/: tracker.hpp
contract/src/: tracker.cpp
contract/tracker/: CMakeLists.txt  tracker.cpp
docker/: eosio.dockerfile
qrscanner/: CMakeLists.txt  config.json  config.py  main.cpp
qrscanner/scripts/: create_scanner.sh  destroy_scanner.sh  start_scanner.sh
server/: package.json  server.js
webapp/: package.json
webapp/pages/: index.js
